Addec check box to mark todo-item done / un-done
