# modules/todo-list/todo-list-restbuild/todo-list-restbuild-api/src/main/java/com/liferay/todolist/resetbuild/resource/v1_0/TodoItemResource.java
@@ -33,7 +33,13 @@ public interface TodoItemResource {
 		return FactoryHolder.factory.create();
 	}
 
-	public Page<TodoItem> getTodolistGettodolistPage() throws Exception;
+	public Page<TodoItem> getTodolistPage() throws Exception;
+
+	public Page<TodoItem> patchTodolistMarkItemDoneTodoItemPage(Long todoItemId)
+		throws Exception;
+
+	public Page<TodoItem> getTodolistMarkItemUndoTodoItemPage(Long todoItemId)
+		throws Exception;
 
 	public default void setContextAcceptLanguage(
 		AcceptLanguage contextAcceptLanguage) {
